--- a/src/Todo.module.scss
+++ b/src/Todo.module.scss
@@ -1,7 +1,8 @@
 .wrapper {
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
   align-items: flex-start;
+  justify-content: center;
   margin-top: 40px;
   text-align: initial;
 }
