--- a/src/Todo.module.scss
+++ b/src/Todo.module.scss
@@ -8,7 +8,8 @@
 }
 
 .body {
-  width: 400px;
+  width: 40%;
+  min-width: 240px;
   user-select: none;
 
   .item {
@@ -48,7 +49,8 @@
 
 .form {
   margin-left: 10px;
-  width: 300px;
+  width: 30%;
+  min-width: 220px;
   background-color: #f3f3f3;
   padding: 15px;
   border-radius: 4px;
